userID cannot be reflected, timestamp is wrong

--- a/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
+++ b/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
@@ -4,24 +4,24 @@
     <div class="radio-group">
       <label class="emotion-label">Joyful:</label>
       <label>
-        <input type="radio" formControlName="joyful" value="very-weak"/>
+        <input type="radio" formControlName="Joyful" value=1/>
         <br />
         Very Weak
       </label>
       <label>
-        <input type="radio" formControlName="joyful" value="weak" />
+        <input type="radio" formControlName="Joyful" value=2 />
         Weak
       </label>
       <label>
-        <input type="radio" formControlName="joyful" value="moderate" />
+        <input type="radio" formControlName="Joyful" value=3 />
         Moderate
       </label>
       <label>
-        <input type="radio" formControlName="joyful" value="strong" />
+        <input type="radio" formControlName="Joyful" value=4 />
         Strong
       </label>
       <label>
-        <input type="radio" formControlName="joyful" value="very-strong" />
+        <input type="radio" formControlName="Joyful" value=5 />
         <br />
         Very Strong
       </label>
@@ -31,24 +31,24 @@
     <div class="radio-group">
       <label class="emotion-label">Curious:</label>
       <label>
-        <input type="radio" formControlName="curious" value="very-weak" />
+        <input type="radio" formControlName="Curious" value=1 />
         <br />
         Very Weak
       </label>
       <label>
-        <input type="radio" formControlName="curious" value="weak" />
+        <input type="radio" formControlName="Curious" value=2 />
         Weak
       </label>
       <label>
-        <input type="radio" formControlName="curious" value="moderate" />
+        <input type="radio" formControlName="Curious" value=3 />
         Moderate
       </label>
       <label>
-        <input type="radio" formControlName="curious" value="strong" />
+        <input type="radio" formControlName="Curious" value=4 />
         Strong
       </label>
       <label>
-        <input type="radio" formControlName="curious" value="very-strong" />
+        <input type="radio" formControlName="Curious" value=5 />
         <br />
         Very Strong
       </label>
@@ -58,24 +58,24 @@
     <div class="radio-group">
       <label class="emotion-label">Surprised:</label>
       <label>
-        <input type="radio" formControlName="surprised" value="very-weak" />
+        <input type="radio" formControlName="Surprised" value=1 />
         <br />
         Very Weak
       </label>
       <label>
-        <input type="radio" formControlName="surprised" value="weak" />
+        <input type="radio" formControlName="Surprised" value=2 />
         Weak
       </label>
       <label>
-        <input type="radio" formControlName="surprised" value="moderate" />
+        <input type="radio" formControlName="Surprised" value=3 />
         Moderate
       </label>
       <label>
-        <input type="radio" formControlName="surprised" value="strong" />
+        <input type="radio" formControlName="Surprised" value=4 />
         Strong
       </label>
       <label>
-        <input type="radio" formControlName="surprised" value="very-strong" />
+        <input type="radio" formControlName="Surprised" value=5 />
         <br />
         Very Strong
       </label>
@@ -85,24 +85,24 @@
     <div class="radio-group">
       <label class="emotion-label">Confused:</label>
       <label>
-        <input type="radio" formControlName="confused" value="very-weak"/>
+        <input type="radio" formControlName="Confused" value=1/>
         <br />
         Very Weak
       </label>
       <label>
-        <input type="radio" formControlName="confused" value="weak" />
+        <input type="radio" formControlName="Confused" value=2 />
         Weak
       </label>
       <label>
-        <input type="radio" formControlName="confused" value="moderate" />
+        <input type="radio" formControlName="Confused" value=3/>
         Moderate
       </label>
       <label>
-        <input type="radio" formControlName="confused" value="strong" />
+        <input type="radio" formControlName="Confused" value=4 />
         Strong
       </label>
       <label>
-        <input type="radio" formControlName="confused" value="very-strong" />
+        <input type="radio" formControlName="Confused" value=5 />
         <br />
         Very Strong
       </label>
@@ -112,24 +112,24 @@
     <div class="radio-group">
       <label class="emotion-label">Anxious:</label>
       <label>
-        <input type="radio" formControlName="anxious" value="very-weak" />
+        <input type="radio" formControlName="Anxious" value=1 />
         <br />
         Very Weak
       </label>
       <label>
-        <input type="radio" formControlName="anxious" value="weak" />
+        <input type="radio" formControlName="Anxious" value=2 />
         Weak
       </label>
       <label>
-        <input type="radio" formControlName="anxious" value="moderate" />
+        <input type="radio" formControlName="Anxious" value=3 />
         Moderate
       </label>
       <label>
-        <input type="radio" formControlName="anxious" value="strong" />
+        <input type="radio" formControlName="Anxious" value=4/>
         Strong
       </label>
       <label>
-        <input type="radio" formControlName="anxious" value="very-strong" />
+        <input type="radio" formControlName="Anxious" value=5 />
         <br />
         Very Strong
       </label>
@@ -139,24 +139,24 @@
     <div class="radio-group">
       <label class="emotion-label">Frustrated:</label>
       <label>
-        <input type="radio" formControlName="frustrated" value="very-weak" />
+        <input type="radio" formControlName="Frustrated" value=1 />
         <br />
         Very Weak
       </label>
       <label>
-        <input type="radio" formControlName="frustrated" value="weak" />
+        <input type="radio" formControlName="Frustrated" value=2 />
         Weak
       </label>
       <label>
-        <input type="radio" formControlName="frustrated" value="moderate" />
+        <input type="radio" formControlName="Frustrated" value=3 />
         Moderate
       </label>
       <label>
-        <input type="radio" formControlName="frustrated" value="strong" />
+        <input type="radio" formControlName="Frustrated" value=4 />
         Strong
       </label>
       <label>
-        <input type="radio" formControlName="frustrated" value="very-strong" />
+        <input type="radio" formControlName="Frustrated" value=5 />
         <br />
         Very Strong
       </label>
@@ -166,27 +166,51 @@
     <div class="radio-group">
       <label class="emotion-label">Bored:</label>
       <label>
-        <input type="radio" formControlName="bored" value="very-weak" />
+        <input type="radio" formControlName="Bored" value=1 />
         <br />
         Very Weak
       </label>
       <label>
-        <input type="radio" formControlName="bored" value="weak" />
+        <input type="radio" formControlName="Bored" value=2 />
         Weak
       </label>
       <label>
-        <input type="radio" formControlName="bored" value="moderate" />
+        <input type="radio" formControlName="Bored" value=3 />
         Moderate
       </label>
       <label>
-        <input type="radio" formControlName="bored" value="strong" />
+        <input type="radio" formControlName="Bored" value=4 />
         Strong
       </label>
       <label>
-        <input type="radio" formControlName="bored" value="very-strong" />
+        <input type="radio" formControlName="Bored" value=5 />
         <br />
         Very Strong
       </label>
     </div>
   </div>
+
+  <div>
+    <h2 for="Inconducive">Which emotion you reported above negatively influenced your Knowledge Building?</h2>
+    <select formControlName="Inconducive" id="Inconducive">
+      <option value="" disabled>Select:</option>
+      <option value="Joyful">Joyful</option>
+      <option value="Curious">Curious</option>
+      <option value="Surprised">Surprised</option>
+      <option value="Confused">Confused</option>
+      <option value="Anxious">Anxious</option>
+      <option value="Frustrated">Frustrated</option>
+      <option value="Bored">Bored</option>
+    </select>
+  </div>
+  <div>
+    <h2 for="Reason">What caused that emotion?</h2>
+    <textarea formControlName="Reason" id="Reason" style="width: 600px; height: 120px; resize: none;"></textarea>
+  </div>
+  <div>
+    <h2 for="Remarks">Is there anything else that you want to share?</h2>
+    <textarea formControlName="Remarks" id="Remarks" style="width: 600px; height: 120px; resize: none;"></textarea>
+  </div>
+  <button type="submit">Submit</button>
+
 </form>
