--- a/ReportEmotionForm/src/app/form/form.component.html
+++ b/ReportEmotionForm/src/app/form/form.component.html
@@ -1,5 +1,5 @@
 <app-emotion-slider></app-emotion-slider>
-<div>
+<!-- <div>
   <h2 for="negativeInfluence">Which emotion you reported above negatively influenced your Knowledge Building?</h2>
   <select formControlName="negativeInfluence" id="negativeInfluence">
     <option value="" disabled>Select:</option>
@@ -20,4 +20,4 @@
   <h2 for="additionalComments">Is there anything else that you want to share?</h2>
   <textarea formControlName="additionalComments" id="additionalComments" style="width: 600px; height: 120px; resize: none;"></textarea>
 </div>
-<button type="submit">Submit</button>
+<button type="submit">Submit</button> -->
