editing the form UI

--- a/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
+++ b/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
@@ -1,6 +1,7 @@
-<h2>I am feeling...</h2>
 <form [formGroup]="feelingsForm" (ngSubmit)="onSubmit()">
+  <h1>Emotion Survey</h1>
   <div>
+    <h2>I am feeling...</h2>
     <div class="radio-group">
       <label class="emotion-label">Joyful:</label>
       <label>
