--- a/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
+++ b/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
@@ -206,11 +206,11 @@
   </div>
   <div>
     <h2 for="Reason">What caused that emotion?</h2>
-    <textarea formControlName="Reason" id="Reason" style="width: 600px; height: 120px; resize: none;"></textarea>
+    <textarea formControlName="Reason" id="Reason" style="width: 100%; height: 120px; resize: none;"></textarea>
   </div>
   <div>
     <h2 for="Remarks">Is there anything else that you want to share?</h2>
-    <textarea formControlName="Remarks" id="Remarks" style="width: 600px; height: 120px; resize: none;"></textarea>
+    <textarea formControlName="Remarks" id="Remarks" style="width: 100%; height: 120px; resize: none;"></textarea>
   </div>
   <button type="submit">Submit</button>
 
