--- a/EmotionFrontend/src/app/dashboard/dashboard.component.html
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
-<div style="display: flex; margin-top: 10px; margin-left: 2%">
-  <app-user-guide-button style="margin-right: 20px;"></app-user-guide-button>
-  <app-select-time-dropdown style="flex: 1"></app-select-time-dropdown>
+<div style="display: flex; margin-top: 10px; margin-left: 2%;">
+  <app-select-time-dropdown style="flex: 1; margin-left: 6%;"></app-select-time-dropdown>
   <app-select-view-dropdown style="flex: 1"></app-select-view-dropdown>
+  <app-user-guide-button style="margin-right: 23px;"></app-user-guide-button>
 </div>
 <div style="display: flex; justify-content: space-between">
   <div style="flex: 1">
@@ -13,4 +13,5 @@
   </div>
 </div>
 <app-report-emotion-button class="btn btn-help" (click)="helpWindow()"></app-report-emotion-button>
+<app-report-readwrite-button></app-report-readwrite-button>
 
