--- a/EmotionFrontend/src/app/user-guide-button/user-guide-button.component.css
+++ b/EmotionFrontend/src/app/user-guide-button/user-guide-button.component.css
@@ -12,11 +12,11 @@
   font-size: 16px;
   font-weight: 600;
   line-height: normal;
-  margin: 0;
+  margin: 0 5px 10px 0;
   min-height: 60px;
   min-width: 0;
   outline: none;
-  padding: 16px 24px;
+  padding: 12px 40px;
   text-align: center;
   text-decoration: none;
   transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
