change the word to NoteEmotion

--- a/EmotionFrontend/src/app/report-readwrite-button/report-readwrite-button.component.html
+++ b/EmotionFrontend/src/app/report-readwrite-button/report-readwrite-button.component.html
@@ -1,1 +1,1 @@
-<button class="button-14" (click)="openstandardDialog('standard')">Report Emotion</button>
+<button class="button-14" (click)="openstandardDialog('standard')">Note Emotion</button>
