--- a/EmotionFrontend/src/app/inconducive/inconducive.component.html
+++ b/EmotionFrontend/src/app/inconducive/inconducive.component.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
 <div class="inconducive-container">
     <div class="left-section">
-      <app-negative-barchart></app-negative-barchart>
+      <!-- <app-negative-barchart></app-negative-barchart> -->
+      <app-stackbarchart></app-stackbarchart>
     </div>
 
     <div class="right-section">
