--- a/EmotionFrontend/src/app/inconducive/inconducive.component.css
+++ b/EmotionFrontend/src/app/inconducive/inconducive.component.css
@@ -3,21 +3,18 @@
 @tailwind utilities;
 
 .inconducive-container {
-    display: flex;
-  }
-  
-.left-section {
-    width: 50%;
-    flex: 1; /* This will make the left section take up the available space */
-}
-  
-.right-section {
-    margin-top: 50px;
-    width: 40%; /* You can adjust the width as needed for the right section */
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  justify-content: space-between;
 }
 
+.left-section {
+  flex: 2;
+}
+
+.right-section {
+  display: flex;
+  align-items: center;
+}
 button.button:hover { 
     text-decoration: none;
     background-color: #a9a9a9; /* Dark grey color */
