add tab component

--- a/EmotionFrontend/src/app/inconducive/inconducive.component.html
+++ b/EmotionFrontend/src/app/inconducive/inconducive.component.html
@@ -2,10 +2,11 @@
 <div class="inconducive-container flex flex-col w-full">
   <div class="flex w-full">
     <div class="left-section flex-2">
-      <app-stackbarchart
+      <app-tab></app-tab>
+      <app-negative-barchart
         class="flex flex-col justify-center"
         style="width: 100%; height: 100%"
-      ></app-stackbarchart>
+      ></app-negative-barchart>
     </div>
 
     <div class="right-section justify-center flex-1">
