--- a/EmotionFrontend/src/app/survey/survey.component.html
+++ b/EmotionFrontend/src/app/survey/survey.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
+
 <div class="survey-container">
     <div class="left-section">
-      <app-bar-chart></app-bar-chart>
+        <app-tab></app-tab>
+      <!-- <app-bar-chart></app-bar-chart> -->
     </div>
 
     <div class="right-section">
