--- a/EmotionFrontend/src/app/bar-chart/bar-chart.component.html
+++ b/EmotionFrontend/src/app/bar-chart/bar-chart.component.html
@@ -8,7 +8,8 @@
           [options] = "barChartOptions"
           [plugins] = "barChartPlugins"
           [legend] = "barChartLegend"
-          [type] = "barChartType">
+          [type] = "barChartType"
+          (chartClick)="handleChartClick($event)">
         </canvas>
       </div>
     <!-- </div> -->
