rearrange the placement of dropdown timeframe

--- a/EmotionFrontend/src/app/survey/survey.component.html
+++ b/EmotionFrontend/src/app/survey/survey.component.html
@@ -1,15 +1,49 @@
 <app-header></app-header>
 
-<div class="survey-container">
+<!-- <div class="survey-container ">
     <div class="left-section">
         <app-tab></app-tab>
-      <!-- <app-bar-chart></app-bar-chart> -->
     </div>
 
     <div class="right-section">
         <app-select-time-dropdown></app-select-time-dropdown>
       
+     
+    </div>
+</div> -->
+
+<div class="survey-container flex flex-col w-full">
+    <div class="flex w-full">
+      <div class="left-section flex-2">
+        <app-tab></app-tab>
+      </div>
+  
+      <div class="right-section justify-center flex-1">
+        <div class="flex flex-col">
+          HI
+        </div>
+      </div>
+    </div>
+  
+    <div class="flex pt-4 w-2/3 justify-around">
+    <app-select-time-dropdown></app-select-time-dropdown>
       <button
+        type="button"
+        class="button inline-flex items-center rounded-md bg-black px-3 py-2 text-sm font-semibold text-white mb-2 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
+      >
+        Download EmoReadWrite
+      </button>
+      <button
+        type="button"
+        class="button inline-flex items-center rounded-md bg-black px-3 py-2 text-sm font-semibold text-white mb-2 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
+      >
+        Download EmoSurvey
+      </button>
+    </div>
+  </div>
+
+
+ <!-- <button
     type="button"
     class="inline-flex items-center rounded-md bg-black px-3 py-2 text-sm font-semibold text-white hover:bg-black hover:bg-opacity-80 mb-2 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black"
     style="max-width: 200px;"
@@ -30,9 +64,7 @@
             <line x1="5" y1="12" x2="19" y2="12"></line>
             <polyline points="12 5 19 12 12 19"></polyline>
         </svg>
-    </button>
-    </div>
-</div>
+    </button> -->
 
 <!-- <div style="display: flex; justify-content: center; align-items: center;">
     <app-select-time-dropdown></app-select-time-dropdown>
