--- a/EmotionFrontend/src/app/report-emotion-button/report-emotion-button.component.css
+++ b/EmotionFrontend/src/app/report-emotion-button/report-emotion-button.component.css
@@ -1,15 +1,15 @@
 .button-14 {
-  background-image: linear-gradient(#f7f8fa ,#e7e9ec);
+  background-image: linear-gradient(#f7f8fa, #e7e9ec);
   border-color: #adb1b8 #a2a6ac #8d9096;
   border-style: solid;
   border-width: 1px;
   border-radius: 3px;
-  box-shadow: rgba(255,255,255,.6) 0 1px 0 inset;
+  box-shadow: rgba(255, 255, 255, 0.6) 0 1px 0 inset;
   box-sizing: border-box;
   color: #0f1111;
   cursor: pointer;
   display: inline-block;
-  font-family: "Amazon Ember",Arial,sans-serif;
+  font-family: "Amazon Ember", Arial, sans-serif;
   font-size: 14px;
   height: 29px;
   font-size: 13px;
@@ -49,6 +49,6 @@
 
 .button-14:focus {
   border-color: #e77600;
-  box-shadow: rgba(228, 121, 17, .5) 0 0 3px 2px;
+  box-shadow: rgba(228, 121, 17, 0.5) 0 0 3px 2px;
   outline: 0;
 }
