change bg color

--- a/ReportEmotionForm/src/app/form/form.component.css
+++ b/ReportEmotionForm/src/app/form/form.component.css
@@ -1,6 +1,6 @@
 button {
   padding: 10px 20px;
-  background-color: #007bff;
+  background-color:blueviolet;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -18,3 +18,4 @@ div {
 /* label {
   font-weight: bold;
 } */
+/* background-color: #007bff; */
