--- a/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
+++ b/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
@@ -5,25 +5,23 @@
     <div class="radio-group">
       <label class="emotion-label">Joyful:</label>
       <label>
-        <input type="radio" formControlName="Joyful" value=1/>
-        <br />
+        <input type="radio" formControlName="Joyful" value="1" />
         Very Weak
       </label>
       <label>
-        <input type="radio" formControlName="Joyful" value=2 />
+        <input type="radio" formControlName="Joyful" value="2" />
         Weak
       </label>
       <label>
-        <input type="radio" formControlName="Joyful" value=3 />
+        <input type="radio" formControlName="Joyful" value="3" />
         Moderate
       </label>
       <label>
-        <input type="radio" formControlName="Joyful" value=4 />
+        <input type="radio" formControlName="Joyful" value="4" />
         Strong
       </label>
       <label>
-        <input type="radio" formControlName="Joyful" value=5 />
-        <br />
+        <input type="radio" formControlName="Joyful" value="5" />
         Very Strong
       </label>
     </div>
@@ -32,25 +30,23 @@
     <div class="radio-group">
       <label class="emotion-label">Curious:</label>
       <label>
-        <input type="radio" formControlName="Curious" value=1 />
-        <br />
+        <input type="radio" formControlName="Curious" value="1" />
         Very Weak
       </label>
       <label>
-        <input type="radio" formControlName="Curious" value=2 />
+        <input type="radio" formControlName="Curious" value="2" />
         Weak
       </label>
       <label>
-        <input type="radio" formControlName="Curious" value=3 />
+        <input type="radio" formControlName="Curious" value="3" />
         Moderate
       </label>
       <label>
-        <input type="radio" formControlName="Curious" value=4 />
+        <input type="radio" formControlName="Curious" value="4" />
         Strong
       </label>
       <label>
-        <input type="radio" formControlName="Curious" value=5 />
-        <br />
+        <input type="radio" formControlName="Curious" value="5" />
         Very Strong
       </label>
     </div>
@@ -59,25 +55,23 @@
     <div class="radio-group">
       <label class="emotion-label">Surprised:</label>
       <label>
-        <input type="radio" formControlName="Surprised" value=1 />
-        <br />
+        <input type="radio" formControlName="Surprised" value="1" />
         Very Weak
       </label>
       <label>
-        <input type="radio" formControlName="Surprised" value=2 />
+        <input type="radio" formControlName="Surprised" value="2" />
         Weak
       </label>
       <label>
-        <input type="radio" formControlName="Surprised" value=3 />
+        <input type="radio" formControlName="Surprised" value="3" />
         Moderate
       </label>
       <label>
-        <input type="radio" formControlName="Surprised" value=4 />
+        <input type="radio" formControlName="Surprised" value="4" />
         Strong
       </label>
       <label>
-        <input type="radio" formControlName="Surprised" value=5 />
-        <br />
+        <input type="radio" formControlName="Surprised" value="5" />
         Very Strong
       </label>
     </div>
@@ -86,25 +80,23 @@
     <div class="radio-group">
       <label class="emotion-label">Confused:</label>
       <label>
-        <input type="radio" formControlName="Confused" value=1/>
-        <br />
+        <input type="radio" formControlName="Confused" value="1" />
         Very Weak
       </label>
       <label>
-        <input type="radio" formControlName="Confused" value=2 />
+        <input type="radio" formControlName="Confused" value="2" />
         Weak
       </label>
       <label>
-        <input type="radio" formControlName="Confused" value=3/>
+        <input type="radio" formControlName="Confused" value="3" />
         Moderate
       </label>
       <label>
-        <input type="radio" formControlName="Confused" value=4 />
+        <input type="radio" formControlName="Confused" value="4" />
         Strong
       </label>
       <label>
-        <input type="radio" formControlName="Confused" value=5 />
-        <br />
+        <input type="radio" formControlName="Confused" value="5" />
         Very Strong
       </label>
     </div>
@@ -113,25 +105,23 @@
     <div class="radio-group">
       <label class="emotion-label">Anxious:</label>
       <label>
-        <input type="radio" formControlName="Anxious" value=1 />
-        <br />
+        <input type="radio" formControlName="Anxious" value="1" />
         Very Weak
       </label>
       <label>
-        <input type="radio" formControlName="Anxious" value=2 />
+        <input type="radio" formControlName="Anxious" value="2" />
         Weak
       </label>
       <label>
-        <input type="radio" formControlName="Anxious" value=3 />
+        <input type="radio" formControlName="Anxious" value="3" />
         Moderate
       </label>
       <label>
-        <input type="radio" formControlName="Anxious" value=4/>
+        <input type="radio" formControlName="Anxious" value="4" />
         Strong
       </label>
       <label>
-        <input type="radio" formControlName="Anxious" value=5 />
-        <br />
+        <input type="radio" formControlName="Anxious" value="5" />
         Very Strong
       </label>
     </div>
@@ -140,25 +130,23 @@
     <div class="radio-group">
       <label class="emotion-label">Frustrated:</label>
       <label>
-        <input type="radio" formControlName="Frustrated" value=1 />
-        <br />
+        <input type="radio" formControlName="Frustrated" value="1" />
         Very Weak
       </label>
       <label>
-        <input type="radio" formControlName="Frustrated" value=2 />
+        <input type="radio" formControlName="Frustrated" value="2" />
         Weak
       </label>
       <label>
-        <input type="radio" formControlName="Frustrated" value=3 />
+        <input type="radio" formControlName="Frustrated" value="3" />
         Moderate
       </label>
       <label>
-        <input type="radio" formControlName="Frustrated" value=4 />
+        <input type="radio" formControlName="Frustrated" value="4" />
         Strong
       </label>
       <label>
-        <input type="radio" formControlName="Frustrated" value=5 />
-        <br />
+        <input type="radio" formControlName="Frustrated" value="5" />
         Very Strong
       </label>
     </div>
@@ -167,32 +155,33 @@
     <div class="radio-group">
       <label class="emotion-label">Bored:</label>
       <label>
-        <input type="radio" formControlName="Bored" value=1 />
-        <br />
+        <input type="radio" formControlName="Bored" value="1" />
         Very Weak
       </label>
       <label>
-        <input type="radio" formControlName="Bored" value=2 />
+        <input type="radio" formControlName="Bored" value="2" />
         Weak
       </label>
       <label>
-        <input type="radio" formControlName="Bored" value=3 />
+        <input type="radio" formControlName="Bored" value="3" />
         Moderate
       </label>
       <label>
-        <input type="radio" formControlName="Bored" value=4 />
+        <input type="radio" formControlName="Bored" value="4" />
         Strong
       </label>
       <label>
-        <input type="radio" formControlName="Bored" value=5 />
-        <br />
+        <input type="radio" formControlName="Bored" value="5" />
         Very Strong
       </label>
     </div>
   </div>
 
   <div>
-    <h2 for="Inconducive">Which emotion you reported above negatively influenced your Knowledge Building?</h2>
+    <h2 for="Inconducive">
+      Which emotion you reported above negatively influenced your Knowledge
+      Building?
+    </h2>
     <select formControlName="Inconducive" id="Inconducive">
       <option value="" disabled>Select:</option>
       <option value="Joyful">Joyful</option>
@@ -206,12 +195,19 @@
   </div>
   <div>
     <h2 for="Reason">What caused that emotion?</h2>
-    <textarea formControlName="Reason" id="Reason" style="width: 100%; height: 120px; resize: none;"></textarea>
+    <textarea
+      formControlName="Reason"
+      id="Reason"
+      style="width: 100%; height: 120px; resize: none"
+    ></textarea>
   </div>
   <div>
     <h2 for="Remarks">Is there anything else that you want to share?</h2>
-    <textarea formControlName="Remarks" id="Remarks" style="width: 100%; height: 120px; resize: none;"></textarea>
+    <textarea
+      formControlName="Remarks"
+      id="Remarks"
+      style="width: 100%; height: 120px; resize: none"
+    ></textarea>
   </div>
   <button type="submit">Submit</button>
-
 </form>
