edit the reportemoform

--- a/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
+++ b/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
@@ -6,7 +6,7 @@
       <label class="emotion-label">Joyful:</label>
       <label>
         <input type="radio" formControlName="Joyful" value=1/>
-        <br />
+        
         Very Weak
       </label>
       <label>
@@ -23,7 +23,7 @@
       </label>
       <label>
         <input type="radio" formControlName="Joyful" value=5 />
-        <br />
+    
         Very Strong
       </label>
     </div>
@@ -33,7 +33,7 @@
       <label class="emotion-label">Curious:</label>
       <label>
         <input type="radio" formControlName="Curious" value=1 />
-        <br />
+        
         Very Weak
       </label>
       <label>
@@ -50,7 +50,7 @@
       </label>
       <label>
         <input type="radio" formControlName="Curious" value=5 />
-        <br />
+        
         Very Strong
       </label>
     </div>
@@ -60,7 +60,7 @@
       <label class="emotion-label">Surprised:</label>
       <label>
         <input type="radio" formControlName="Surprised" value=1 />
-        <br />
+      
         Very Weak
       </label>
       <label>
@@ -77,7 +77,7 @@
       </label>
       <label>
         <input type="radio" formControlName="Surprised" value=5 />
-        <br />
+        
         Very Strong
       </label>
     </div>
@@ -87,7 +87,7 @@
       <label class="emotion-label">Confused:</label>
       <label>
         <input type="radio" formControlName="Confused" value=1/>
-        <br />
+        
         Very Weak
       </label>
       <label>
@@ -104,8 +104,9 @@
       </label>
       <label>
         <input type="radio" formControlName="Confused" value=5 />
-        <br />
+        
         Very Strong
+      
       </label>
     </div>
   </div>
@@ -114,7 +115,7 @@
       <label class="emotion-label">Anxious:</label>
       <label>
         <input type="radio" formControlName="Anxious" value=1 />
-        <br />
+        
         Very Weak
       </label>
       <label>
@@ -131,7 +132,7 @@
       </label>
       <label>
         <input type="radio" formControlName="Anxious" value=5 />
-        <br />
+        
         Very Strong
       </label>
     </div>
@@ -141,7 +142,7 @@
       <label class="emotion-label">Frustrated:</label>
       <label>
         <input type="radio" formControlName="Frustrated" value=1 />
-        <br />
+    
         Very Weak
       </label>
       <label>
@@ -158,7 +159,7 @@
       </label>
       <label>
         <input type="radio" formControlName="Frustrated" value=5 />
-        <br />
+     
         Very Strong
       </label>
     </div>
@@ -168,7 +169,7 @@
       <label class="emotion-label">Bored:</label>
       <label>
         <input type="radio" formControlName="Bored" value=1 />
-        <br />
+        
         Very Weak
       </label>
       <label>
@@ -185,15 +186,22 @@
       </label>
       <label>
         <input type="radio" formControlName="Bored" value=5 />
-        <br />
         Very Strong
       </label>
     </div>
   </div>
 
+  <!-- <div formArrayName="Inconducive">
+    <h2 for="Inconducive">Which emotions you reported above negatively influenced your Knowledge Building?</h2>
+    <div *ngFor="let option of options; let i = index">
+      <input type="checkbox" [formControlName]="i" [id]="option.id" />
+      <label [for]="option.id">{{ option.label }}</label>
+    </div>
+  </div> -->
+
   <div>
-    <h2 for="Inconducive">Which emotion you reported above negatively influenced your Knowledge Building?</h2>
-    <select formControlName="Inconducive" id="Inconducive">
+    <h2 for="Inconducive">Which emotions you reported above negatively influenced your Knowledge Building?</h2>
+    <select formControlName="Inconducive" id="Inconducive" >
       <option value="" disabled>Select:</option>
       <option value="Joyful">Joyful</option>
       <option value="Curious">Curious</option>
