update survey dashboard adding survey notes

--- a/EmotionFrontend/src/app/survey/survey.component.html
+++ b/EmotionFrontend/src/app/survey/survey.component.html
@@ -20,7 +20,7 @@
   
       <div class="right-section justify-center flex-1">
         <div class="flex flex-col">
-          HI
+          <app-scrollspy></app-scrollspy>
         </div>
       </div>
     </div>
