Fixed right section overflowing

--- a/EmotionFrontend/src/app/survey/survey.component.css
+++ b/EmotionFrontend/src/app/survey/survey.component.css
@@ -14,6 +14,8 @@
   .right-section {
     margin-top: 50px;
     width: 40%; /* You can adjust the width as needed for the right section */
-    display: flex;
+    display: absolute;
     flex-direction: column;
+    height: 40vh;
+    overflow-y: auto; 
   }
