--- a/EmotionFrontend/src/app/scrollspy/scrollspy.component.html
+++ b/EmotionFrontend/src/app/scrollspy/scrollspy.component.html
@@ -50,12 +50,12 @@
 	  </div>
 	</div>
   
-	<div class="col-2" style="position: sticky; top:0; justify-content: center; align-items: center;padding-left: 15px;">
+	<!-- <div class="col-2" style="position: sticky; top:0; justify-content: center; align-items: center;padding-left: 15px;">
 	  <div id="scrollspy"  style=" position: fixed; z-index: 1; height: 70%; overflow: auto ; " class="sidebar">
 		<ul [mdbScrollspy]="'scrollspy'" class="nav flex-column nav-pills menu-sidebar">
 			<li class="nav-item"  *ngFor="let emoSurvey of filteredEmoSurveys; let i = index">
 			  <a [mdbScrollspyLink]="'example-' + (currentSectionNumber + i)" class="nav-link" [class.active]="activeSection == i" (click)="setActiveSection(i)" style="cursor:pointer;">Response {{ currentSectionNumber + i }}</a>
-			</li>
+			</li> -->
 		  
 		<!-- <ul mdbScrollspy="scrollspy" class="nav flex-column nav-pills menu-sidebar">
 		  <li class="nav-item" *ngFor="let emoSurvey of filteredEmoSurveys; let i = index">
@@ -70,8 +70,10 @@
 		  <li class="nav-item">
 			<a mdbScrollspyLink="example-4" class="nav-link">Section 4</a>
 		  </li> -->
-		</ul>
+		<!-- </ul>
 	  </div>
-	</div>
+	</div> -->
+
+	
   </div>
 </div>
