--- a/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
+++ b/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
@@ -3,7 +3,7 @@
   <div>
     <h2>I am feeling...</h2>
     <div class="radio-group">
-      <label class="emotion-label">Joyful:</label>
+      <label class="emotion-label">Joyful 😀:</label>
       <label>
         <input type="radio" formControlName="Joyful" value="1" />
         Very Weak
@@ -29,7 +29,7 @@
   </div>
   <div>
     <div class="radio-group">
-      <label class="emotion-label">Curious:</label>
+      <label class="emotion-label">Curious 😳:</label>
       <label>
         <input type="radio" formControlName="Curious" value="1" />
         <br />
@@ -56,7 +56,7 @@
   </div>
   <div>
     <div class="radio-group">
-      <label class="emotion-label">Surprised:</label>
+      <label class="emotion-label">Surprised 😲:</label>
       <label>
         <input type="radio" formControlName="Surprised" value="1" />
         <br />
@@ -83,7 +83,7 @@
   </div>
   <div>
     <div class="radio-group">
-      <label class="emotion-label">Confused:</label>
+      <label class="emotion-label">Confused 😕:</label>
       <label>
         <input type="radio" formControlName="Confused" value="1" />
         <br />
@@ -110,7 +110,7 @@
   </div>
   <div>
     <div class="radio-group">
-      <label class="emotion-label">Anxious:</label>
+      <label class="emotion-label">Anxious 😰:</label>
       <label>
         <input type="radio" formControlName="Anxious" value="1" />
         <br />
@@ -137,7 +137,7 @@
   </div>
   <div>
     <div class="radio-group">
-      <label class="emotion-label">Frustrated:</label>
+      <label class="emotion-label">Frustrated 😣:</label>
       <label>
         <input type="radio" formControlName="Frustrated" value="1" />
         <br />
@@ -164,7 +164,7 @@
   </div>
   <div>
     <div class="radio-group">
-      <label class="emotion-label">Bored:</label>
+      <label class="emotion-label">Bored 🥱:</label>
       <label>
         <input type="radio" formControlName="Bored" value="1" />
         <br />
@@ -204,25 +204,25 @@
       Building?
     </h2>
     <input type="checkbox" formControlName="Joyful" id="Joyful" />
-    <label for="Joyful">Joyful</label><br />
+    <label for="Joyful">Joyful 😀</label><br />
 
     <input type="checkbox" formControlName="Curious" id="Curious" />
-    <label for="Curious">Curious</label><br />
+    <label for="Curious">Curious 😳</label><br />
 
     <input type="checkbox" formControlName="Surprised" id="Surprised" />
-    <label for="Surprised">Surprised</label><br />
+    <label for="Surprised">Surprised 😲</label><br />
 
     <input type="checkbox" formControlName="Confused" id="Confused" />
-    <label for="Confused">Confused</label><br />
+    <label for="Confused">Confused 😕</label><br />
 
     <input type="checkbox" formControlName="Anxious" id="Anxious" />
-    <label for="Anxious">Anxious</label><br />
+    <label for="Anxious">Anxious 😰</label><br />
 
     <input type="checkbox" formControlName="Frustrated" id="Frustrated" />
-    <label for="Frustrated">Frustrated</label><br />
+    <label for="Frustrated">Frustrated 😣</label><br />
 
     <input type="checkbox" formControlName="Bored" id="Bored" />
-    <label for="Bored">Bored</label><br />
+    <label for="Bored">Bored 🥱</label><br />
   </div>
   <div>
     <h2 for="Reason">What caused that emotion?</h2>
