--- a/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
+++ b/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
@@ -203,26 +203,28 @@
       Which emotions you reported above negatively influenced your Knowledge
       Building?
     </h2>
-    <input type="checkbox" formControlName="Joyful" id="Joyful" />
-    <label for="Joyful">Joyful 😀</label><br />
+    <div>
+      <input type="checkbox" formControlName="Joyful" id="Joyful" />
+      <label for="Joyful">Joyful 😀</label>
 
-    <input type="checkbox" formControlName="Curious" id="Curious" />
-    <label for="Curious">Curious 😳</label><br />
+      <input type="checkbox" formControlName="Curious" id="Curious" />
+      <label for="Curious">Curious 😳</label>
 
-    <input type="checkbox" formControlName="Surprised" id="Surprised" />
-    <label for="Surprised">Surprised 😲</label><br />
+      <input type="checkbox" formControlName="Surprised" id="Surprised" />
+      <label for="Surprised">Surprised 😲</label>
 
-    <input type="checkbox" formControlName="Confused" id="Confused" />
-    <label for="Confused">Confused 😕</label><br />
+      <input type="checkbox" formControlName="Confused" id="Confused" />
+      <label for="Confused">Confused 😕</label>
 
-    <input type="checkbox" formControlName="Anxious" id="Anxious" />
-    <label for="Anxious">Anxious 😰</label><br />
+      <input type="checkbox" formControlName="Anxious" id="Anxious" />
+      <label for="Anxious">Anxious 😰</label>
 
-    <input type="checkbox" formControlName="Frustrated" id="Frustrated" />
-    <label for="Frustrated">Frustrated 😣</label><br />
+      <input type="checkbox" formControlName="Frustrated" id="Frustrated" />
+      <label for="Frustrated">Frustrated 😣</label>
 
-    <input type="checkbox" formControlName="Bored" id="Bored" />
-    <label for="Bored">Bored 🥱</label><br />
+      <input type="checkbox" formControlName="Bored" id="Bored" />
+      <label for="Bored">Bored 🥱</label>
+    </div>
   </div>
   <div>
     <h2 for="Reason">What caused that emotion?</h2>
