added reflection history button

--- a/EmotionFrontend/src/app/header/header.component.html
+++ b/EmotionFrontend/src/app/header/header.component.html
@@ -4,5 +4,6 @@
     <div class="flex-spacer"></div>
     <div class="reflect-button">
         <app-reflect-button></app-reflect-button>
+        <app-reflect-history-button></app-reflect-history-button>
     </div>
 </div>
